--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+#Springdoc OpenAPI 3.1 Swagger 3
+springdoc.swagger-ui.path=/docs-edplus.html
+springdoc.api-docs.path=/docs-edplus
+springdoc.packages-to-scan=com.edplus.controller
+springdoc.override-with-generic-response=false
