--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 
 #DATASOURCE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://34.95.231.9:3306/ed_plus?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
-spring.datasource.username=ed_plus
-spring.datasource.password=Ed@plus123
+spring.datasource.url=jdbc:mysql://3.17.166.110:3306/ed_plus?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=********
+spring.datasource.password=****
 
